# dynamic-plot

./: .emacs.desktop  .gitignore  .travis.yml  README.md  dynamic-plot.cabal  stack.yaml
Data/LinearMap/: HerMetric.hs
Graphics/Dynamic/: Plot.hs
Graphics/Dynamic/Plot/: Colour.hs  R2.hs
Graphics/Dynamic/Plot/Internal/: Types.hs
Graphics/Dynamic/Plot/R2/: Gtk.hs
Graphics/Image/: Resample.hs
Graphics/Text/: Annotation.hs
dynamic-plot/: INSTALL  dynamic-plot.cabal
dynamic-plot-gtk/: dynamic-plot-gtk.cabal
dynamic-plot-gtk/Graphics/Dynamic/Plot/R2/: Gtk.hs
dynamic-plot/Graphics/Dynamic/Plot/: Colour.hs  Internals.hs  R2.hs
dynamic-plot/Graphics/Dynamic/Plot/Internal/: Types.hs
dynamic-plot/Graphics/Dynamic/Plot/R2/: Internal.hs
dynamic-plot/Graphics/Text/: Annotation.hs
images/examples/: cos-encircle-points.ghci  sin-ctrd-tangents.ghci
