Name:                dynamic-plot
Version:             0.1
Category:            graphics
Synopsis:            Interactive diagram windows
Description:         When plotting functions etc., it is often not known a priori what
                     range should be displayed, what resolution is needed, and so on. The
                     most efficient way to set these parameters is in an interactive
                     window.
License:             GPL-3
License-file:        COPYING
Author:              Justus Sagemüller
Maintainer:          (@) sagemuej $ smail.uni-koeln.de
Build-Type:          Simple
Cabal-Version:       >=1.2
Extra-Doc-Files:     images/examples/*.png

Library
  Build-Depends:     base>=4.5
                     , transformers
                     , mtl
                     , vector-space>=0.8
                     , MemoTrie
                     , vector
                     , containers
                     , semigroups
                     , random
                     , MonadRandom
                     , time
                     , async
                     , deepseq
                     , process
                     , constrained-categories
                     , diagrams-core == 1.2.0.2
                     , diagrams-lib >= 1 && < 1.4
                     , diagrams-cairo == 1.2.0.2
                     , diagrams-gtk
                     , gtk > 0.10 && < 0.15
                     , glib
                     , colour >= 2 && < 3
                     , manifolds
                     , lens
  Extensions:        FlexibleInstances
                     , TypeFamilies
                     , FlexibleContexts
                     , GADTs
                     , RankNTypes
                     , ConstraintKinds
                     , PatternGuards
                     , ScopedTypeVariables
                     , RecordWildCards
                     , TupleSections
  ghc-options:       -O2
  Exposed-modules:   Graphics.Dynamic.Plot.R2
  Other-modules:     Graphics.Dynamic.Plot.Colour
                     , Data.LinearMap.HerMetric
