Name:                dynamic-plot-gtk
Version:             0.4.2.0
Category:            graphics
Synopsis:            Interactive diagram windows
Description:         Showing and manipulating plots, diagrams etc. in GTK.
License:             GPL-3
License-file:        COPYING
Author:              Justus Sagemüller
Maintainer:          (@) jsag $ hvl.no
Homepage:            https://github.com/leftaroundabout/dynamic-plot
Build-Type:          Simple
Cabal-Version:       1.18

Source-Repository head
    type: git
    location: git://github.com/leftaroundabout/dynamic-plot.git

Library
  Build-Depends:     base>=4.5 && <6
                     , dynamic-plot ==0.4.2.0
                     , transformers
                     , mtl
                     , vector-space>=0.8
                     , MemoTrie
                     , vector
                     , tagged
                     , containers
                     , semigroups
                     , data-default
                     , random, random-fu
                     , time
                     , deepseq
                     , process
                     , constrained-categories >= 0.2
                     , free-vector-spaces >= 0.1 && < 0.3
                     , linearmap-category >=0.3.5
                     , diagrams-core
                     , diagrams-lib >= 1.3 && < 1.5
                     , diagrams-cairo
                     , diagrams-gtk
                     , gtk > 0.10 && < 0.16
                     , glib
                     , colour >= 2 && < 3
                     , manifolds >= 0.4.2 && < 0.7
                     , manifold-random
                     , colour-space >=0.2
                     , JuicyPixels > 3 && < 4
                     , lens < 6.0
  ghc-options:       -O2
  default-language:  Haskell2010
  Exposed-modules:   Graphics.Dynamic.Plot.R2.Gtk
